# bhr-api-python

./: .gitignore  .openapi-generator-ignore  AUTHENTICATION.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: generate.yml  publish-pypi.yml  publish-testpypi.yml  sdk-update.yml
.openapi-generator/: FILES
bamboohr_sdk/: __init__.py  api_client.py  api_error_helper.py  api_helper.py  configuration.py  exceptions.py  rest.py
bamboohr_sdk/api/: __init__.py  account_information_api.py  alert_api.py  alert_configurations_api.py  applicant_tracking_api.py  benefits_api.py  company_api.py  company_files_api.py  company_profile_api.py  compensation_api.py  compensation_benchmarking_api.py  compensation_planning_api.py  custom_reports_api.py  datasets_api.py  employee_files_api.py  employee_verification_api.py  employees_api.py  goals_api.py  hours_api.py  last_change_information_api.py  locations_api.py  login_api.py  manual_api.py  onboarding_api.py  photos_api.py  reports_api.py  scheduling_api.py  tabular_data_api.py  time_off_api.py  time_tracking_api.py  total_rewards_api.py  training_api.py  webhook_events_api.py  webhooks_api.py
bamboohr_sdk/client/: __init__.py  auth_builder.py  bamboohr_client.py
bamboohr_sdk/exceptions/: __init__.py
bamboohr_sdk/models/: __init__.py  a05b6d5f564f805d688ff2c1e37c3990_request.py  ad7871529b2a9c6612f8dd3c62192c08_request.py  add_cycle_admins_response.py  add_cycle_admins_response_added_inner.py  add_cycle_admins_response_skipped_inner.py  add_new_employee_training_record_request.py  add_new_employee_training_record_request_cost.py  add_total_rewards_employees_request.py  add_training_category_request.py  add_training_type_request.py  add_training_type_request_category.py  adjust_time_off_balance.py  adjust_time_tracking_request_schema.py  alert_template_list_response.py  alert_template_list_response_alerts_inner.py  alignment_options_response.py  alignment_options_response_aligns_with_options_inner.py  applicant_status.py  application_details.py  application_details_applicant.py  application_details_applicant_address.py  application_details_applicant_education.py  application_details_applicant_education_level.py  application_details_attachments_inner.py  application_details_job.py  application_details_job_hiring_lead.py  application_details_job_hiring_lead_job_title.py  application_details_job_title.py  application_details_questions_and_answers_inner.py  application_details_questions_and_answers_inner_answer.py  application_details_questions_and_answers_inner_question.py  application_details_status.py  application_details_status_changed_by_user.py  applications_list.py  (+617 more)
docs/: A05b6d5f564f805d688ff2c1e37c3990Request.md  AccountInformationApi.md  Ad7871529b2a9c6612f8dd3c62192c08Request.md  AddCycleAdminsResponse.md  AddCycleAdminsResponseAddedInner.md  AddCycleAdminsResponseSkippedInner.md  AddNewEmployeeTrainingRecordRequest.md  AddNewEmployeeTrainingRecordRequestCost.md  AddTotalRewardsEmployeesRequest.md  AddTrainingCategoryRequest.md  AddTrainingTypeRequest.md  AddTrainingTypeRequestCategory.md  AdjustTimeOffBalance.md  AdjustTimeTrackingRequestSchema.md  AlertApi.md  AlertConfigurationsApi.md  AlertTemplateListResponse.md  AlertTemplateListResponseAlertsInner.md  AlignmentOptionsResponse.md  AlignmentOptionsResponseAlignsWithOptionsInner.md  ApplicantStatus.md  ApplicantTrackingApi.md  ApplicationDetails.md  ApplicationDetailsApplicant.md  ApplicationDetailsApplicantAddress.md  ApplicationDetailsApplicantEducation.md  ApplicationDetailsApplicantEducationLevel.md  ApplicationDetailsAttachmentsInner.md  ApplicationDetailsJob.md  ApplicationDetailsJobHiringLead.md  ApplicationDetailsJobHiringLeadJobTitle.md  ApplicationDetailsJobTitle.md  ApplicationDetailsQuestionsAndAnswersInner.md  ApplicationDetailsQuestionsAndAnswersInnerAnswer.md  ApplicationDetailsQuestionsAndAnswersInnerQuestion.md  ApplicationDetailsStatus.md  ApplicationDetailsStatusChangedByUser.md  ApplicationDetailsStatusChangedByUserJobTitle.md  ApplicationsList.md  ApplicationsListApplications.md  (+643 more)
examples/: 01_first_api_call.py  02_oauth_with_auto_refresh.py  03_oauth_complete_flow.py  04_error_handling.py  05_common_api_patterns.py  06_complete_application.py  07_testing_patterns.py  README.md
scripts/: README.md  build_pr_body.py  bump_version.py  cleanup_obsolete_files.py  fetch_spec.py  generate_error_docs.py  generate_exceptions.py  post_generate.py  smoke_test.py  update_error_docs.py
specs/: spec-source.json
templates-python/: README.mustache  api.mustache  api_client.mustache  api_exception_doc.mustache  api_test.mustache  client_exception_doc.mustache  configuration.mustache  error_codes_doc.mustache  exception_doc.mustache  exceptions.mustache  partial_api_args.mustache  server_exception_doc.mustache
test/: test_account_information_api.py  test_alert_api.py  test_alert_configurations_api.py  test_applicant_tracking_api.py  test_benefits_api.py  test_company_api.py  test_company_files_api.py  test_company_profile_api.py  test_compensation_api.py  test_compensation_benchmarking_api.py  test_compensation_planning_api.py  test_custom_reports_api.py  test_datasets_api.py  test_employee_files_api.py  test_employee_verification_api.py  test_employees_api.py  test_goals_api.py  test_hours_api.py  test_last_change_information_api.py  test_locations_api.py  test_login_api.py  test_onboarding_api.py  test_photos_api.py  test_reports_api.py  test_scheduling_api.py  test_tabular_data_api.py  test_time_off_api.py  test_time_tracking_api.py  test_total_rewards_api.py  test_training_api.py  test_webhook_events_api.py  test_webhooks_api.py
tests/: conftest.py  test_api_error_helper.py  test_api_helper.py  test_auth_builder.py  test_bamboohr_client.py  test_configuration.py  test_exceptions.py  test_manual_api.py  test_oauth2_middleware.py  test_request_id_middleware.py  test_secure_log_filter.py  test_token_manager.py  test_token_refresh_provider.py
(+35 files in other folders)
