[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamboohr-sdk"
version = "1.0.0"
description = "Official Python SDK for the BambooHR API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BambooHR", email = "support@bamboohr.com" },
]
keywords = [
    "bamboohr",
    "api",
    "sdk",
    "openapi",
    "openapi-generator",
    "rest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "urllib3>=1.25.3",
]

[project.urls]
Homepage = "https://www.bamboohr.com/"
Documentation = "https://documentation.bamboohr.com"
Repository = "https://github.com/BambooHR/bhr-api-python"

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["bamboohr_sdk"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "bamboohr_sdk.api.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "bamboohr_sdk.models.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["bamboohr_sdk", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["bamboohr_sdk"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
