[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bamboohr-sdk"
version = "1.0.0"
description = "Official Python SDK for the BambooHR API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BambooHR", email = "support@bamboohr.com" },
]
keywords = [
    "bamboohr",
    "api",
    "sdk",
    "openapi",
    "openapi-generator",
    "rest",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "urllib3>=1.25.3",
]

[project.urls]
Homepage = "https://www.bamboohr.com/"
Documentation = "https://documentation.bamboohr.com"
Repository = "https://github.com/BambooHR/bhr-api-python"

[project.optional-dependencies]
dev = [
    "chevron>=0.14",
    "mypy>=1.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["bamboohr_sdk"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "bamboohr_sdk.api.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "bamboohr_sdk.models.*"
disallow_untyped_defs = false

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["bamboohr_sdk", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["bamboohr_sdk"]

# Generated code (openapi-generator output) — relax rules that come from
# the upstream templates and aren't worth fixing in our fork.
# Hand-written code lives under bamboohr_sdk/client/ and stays under the
# default rule set.
[tool.ruff.lint.per-file-ignores]
"bamboohr_sdk/api/*.py" = [
    "B028", "B904", "F841", "N805", "RUF002", "RUF012", "RUF059",
    "SIM101", "SIM105", "SIM108", "SIM118", "TC001", "TC003", "UP030", "UP031",
]
"bamboohr_sdk/models/*.py" = [
    "F841", "N805", "N818", "RUF002", "RUF012", "SIM118", "TC001", "TC003",
]
"bamboohr_sdk/api_client.py" = [
    "B028", "B904", "F841", "RUF002", "RUF012", "RUF059",
    "SIM101", "SIM105", "SIM108", "TC001", "TC003", "UP030", "UP031",
]
"bamboohr_sdk/api_helper.py" = ["TC001", "TC003"]
"bamboohr_sdk/api_response.py" = ["TC001", "TC003"]
"bamboohr_sdk/configuration.py" = ["B028", "B904", "RUF002", "UP030", "UP031"]
"bamboohr_sdk/exceptions.py" = ["N818", "SIM105"]
"bamboohr_sdk/rest.py" = ["B028", "B904", "RUF002", "SIM101", "SIM108"]
# Hand-written client code: relax rules for type-only imports and
# docstring-only stylistic noise. Real bugs would still surface via
# mypy and the test suite.
"bamboohr_sdk/client/**/*.py" = ["B904", "RUF002", "RUF059", "TC001", "TC003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q"
